--- a/static/src/less/variables.less
+++ b/static/src/less/variables.less
@@ -7,8 +7,8 @@
 @odoo-font-size-base-touch: 15px;
 
 // Colors
-@odoo-brand-primary: #0088ff;
-@odoo-brand-optional: #1D4996;
+@odoo-brand-primary: #003321;
+@odoo-brand-optional: #002417;
 @odoo-brand-secondary: #8f8f8f;
 @odoo-brand-lightsecondary: @odoo-color-silver;
 
