--- a/static/src/less/app_switcher.less
+++ b/static/src/less/app_switcher.less
@@ -7,7 +7,7 @@
   .o-background-size(cover);
 
   // Prefer css gradient over images
-	.o-skew-gradient(#003321 #00472E);
+	.o-skew-gradient(#003321, #00472E);
 
   // When applied on webclient (note: we do not specify the webclient class
   // here to avoid breaking studio custom style)
